--- a/02-chess/package.json
+++ b/02-chess/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.3.3",
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
     "chess.js": "^0.10.2",
@@ -31,5 +31,8 @@
     "socket.io-client": "^1.5.1",
     "time-grunt": "^1.2.1",
     "uglifyify": "^3.0.4"
+  },
+  "dependencies": {
+    "lodash.merge": "^4.6.0"
   }
 }
